[package]
name = "OverlayBot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3.0"
serenity = {version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"]}
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
savefile-derive = "0.8.3"
savefile = "0.8.3"



[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic